--- a/A2/app/src/main/res/values/strings.xml
+++ b/A2/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="load_dummy_data_button_value">Load Dummy Data</string>
     <string name="store_name_required_message">The name of the store is required</string>
     <string name="purchase_amount_required_message">The amount of the purchase is required</string>
+    <string name="list_of_purchases">Purchases</string>
 </resources>
