Created the dialog custom layout to edit a purchase. Needed to implement the feature to update the purchase that is selected.

--- a/A2/app/src/main/res/values/strings.xml
+++ b/A2/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="store_name_required_message">The name of the store is required</string>
     <string name="purchase_amount_required_message">The amount of the purchase is required</string>
     <string name="list_of_purchases">Purchases</string>
+    <string name="update_purchase">Update Purchase</string>
 </resources>
