Created the handler logic to show a toast confirmation message when the handlers are activated. Created the validation logic to validate the Purchase information when it getting saved.

--- a/A2/app/src/main/res/values/strings.xml
+++ b/A2/app/src/main/res/values/strings.xml
@@ -11,6 +11,9 @@
     <string name="load_dummy_data_button_value">Load Dummy Data</string>
     <string name="store_name_required_message">The name of the store is required</string>
     <string name="purchase_amount_required_message">The amount of the purchase is required</string>
+    <string name="purchase_record_updated_successfully_message">The purchase has been successfully updated</string>
+    <string name="purchase_record_created_successfully_message">The purchase has been successfully created</string>
+    <string name="purchase_records_populated_successfully_message">The list of purchases has been populated with five records of Purchase</string>
     <string name="list_of_purchases">Purchases</string>
     <string name="update_purchase">Update Purchase</string>
 </resources>
