Build a general UI for the screen #2

--- a/T1-hien-hnguyen110/app/src/main/res/values/strings.xml
+++ b/T1-hien-hnguyen110/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">T1-hien-hnguyen110</string>
     <string name="set_as_favourite_option_label">Set as Favourite</string>
     <string name="reset_option_label">Reset</string>
+    <string name="pokemon_details_label">Pokemon Details</string>
+    <string name="fight_computer_button_label">Fight Computer</string>
 </resources>
