--- a/Movies-hien-hnguyen110/app/src/main/res/values/strings.xml
+++ b/Movies-hien-hnguyen110/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="hello_blank_fragment">Hello
         blank fragment
     </string>
+    <string name="plot_summary_label">Plot Summary</string>
+    <string name="buy_ticket_button_label">buy a ticket</string>
 </resources>
