Added the custom layout for the purchase row

--- a/Movies-hien-hnguyen110/app/src/main/res/values/strings.xml
+++ b/Movies-hien-hnguyen110/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="buy_ticket_button_label">buy a ticket</string>
     <string name="my_ticket_option_label">My Tickets</string>
     <string name="now_playing_option_label">Now Playing</string>
+    <string name="tickets_fragment_label">My Tickets</string>
 </resources>
